--- a/public/css/index.css
+++ b/public/css/index.css
@@ -488,7 +488,7 @@ header .navbar.animate {
     border-radius: 1rem;
     box-shadow: 0 0 36px rgba(0,0,0,0.1);
     /* transform: translate3d(0, 0, 0); */
-    transition: box-shadow .2s linear,opacity .2s linear;
+    transition: box-shadow .2s linear, opacity .2s linear;
     border: 2px solid transparent;
 }
 
@@ -517,6 +517,35 @@ header .navbar.animate {
 
 #achievements img {
     border-radius: 0.7rem;
+}
+
+
+#blog .card {
+    cursor: context-menu;
+    background-color: var(--secondary-color) !important;
+    border-radius: 1rem;
+    box-shadow: 0 0 36px rgba(0,0,0,0.1);
+    /* transform: translate3d(0, 0, 0); */
+    transition: box-shadow .2s linear,opacity .2s linear;
+    border: 2px solid transparent;
+}
+#blog .card-title {
+    color: var(--primary-color) !important;
+    text-decoration: none;
+}
+
+#blog .card-text {
+    background-color: var(--secondary-color) !important;
+    color: var(--text-secondary-color) !important;
+}
+
+#blog .post-footer {
+    color: var(--primary-color) !important;
+}
+
+#blog .btn {
+    color: var(--primary-color) !important;
+    border-color: var(--primary-color) !important;
 }
 
 /* contact */
